--- a/Labs_MIET_25-26_1/Lab_1_MIET_25-26_1/Lab_1_MIET_25-26_1.vcxproj
+++ b/Labs_MIET_25-26_1/Lab_1_MIET_25-26_1/Lab_1_MIET_25-26_1.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Lab_1_MIET_25-26_1.cpp" />
+    <ClCompile Include="main_Lab_1_MIET_25-26_1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
