--- a/Labs_MIET_25-26_1/Lab_1_MIET_25-26_1/Lab_1_MIET_25-26_1.vcxproj.filters
+++ b/Labs_MIET_25-26_1/Lab_1_MIET_25-26_1/Lab_1_MIET_25-26_1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Lab_1_MIET_25-26_1.cpp">
+    <ClCompile Include="main_Lab_1_MIET_25-26_1.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
